Fix for writing area too small on small devices

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 #markdownOutput {
   width: 100%;
   height: 100%;
-  padding: 10vh;
+  padding: 5vh;
   box-sizing: border-box;
   flex-grow: 1;
 }
@@ -87,7 +87,7 @@ body {
   right: -420px;
   width: 400px;
   height: 100%;
-  padding: 1.5rem;
+  padding: 1rem;
   box-shadow: -4px 0 10px rgba(0, 0, 0, 0.1);
   transition: right 0.3s ease-in-out;
   z-index: 99999;
